# sqlmodel-nexus

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  check_field_info.py  check_non_id_pk.py  check_post_comment.py  check_primary_key.py  how_it_works.md  llms-full.txt  pyproject.toml  start_all.sh  test_demo_final.py  test_demo_standard_queries.py  test_standard_queries.py
.github/workflows/: ci.yml  publish.yml
.skills/: release.py
auth_demo/: app.py  database.py  mcp_server.py  models.py  test_auth.sh
demo/: README.md  __init__.py  app.py  database.py  er_diagram_demo.py  mcp_server.py  mcp_server_simple.py  models.py  rpc_fastapi.py  rpc_mcp_server.py  rpc_voyager_demo.py
demo/auth/: __init__.py  app.py  auth.py  mcp_server.py
demo/blog/: app.py  app_paginated.py  database.py  er_diagram_demo.py  mcp_server.py  mcp_server_simple.py  models.py
demo_multiple_app/: mcp_server.py  models.py
tests/: conftest.py  test_autoload.py  test_context.py  test_decorator.py  test_demo_final.py  test_demo_standard_queries.py  test_er_diagram.py  test_field_tree_builder.py  test_fixes.py  test_handler.py  test_input_types.py  test_introspection.py  test_introspection_to_sdl.py  test_loader_factories.py  test_loader_registry.py  test_mcp.py  test_mcp_schema_enhanced.py  test_query_executor.py  test_query_meta.py  test_query_meta_integration.py  test_query_parser.py  test_relationship.py  test_resolver.py  test_response_builder.py  test_rpc.py  test_sdl_generator.py  test_standard_queries.py  test_subset.py  test_type_converter.py  test_type_tracer.py  test_type_utils.py
(+136 files in other folders)
